--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisEvaluationQnA.cshtml
@@ -36,11 +36,11 @@
 
                 </select>
             </div>
-            <div style="padding-left: 50px; display: inline-block;">
+@*            <div style="padding-left: 50px; display: inline-block;">
                 <select style="max-width: 200px; width: 130%; height: 30px; font-size: 16px;
                         margin-bottom: 3px;" id="inputTypeSelecter">
                 </select>
-            </div>
+            </div>*@
             <br>
             <a>평가문제 코드: </a>
             <div style="padding-top: 10px; display: inline-block;">
@@ -54,6 +54,20 @@
                 <input type="text"
                        style="max-width: 400px; width: 130%; height: 25px; font-size: 16px;
                         margin-bottom: 3px;" id="EvaluationQuestionContents" />
+            </div>
+            <div style="padding-left: 50px; display: inline-block;">
+                <select style="max-width: 200px; width: 130%; height: 30px; font-size: 16px;
+                        margin-bottom: 3px;" id="inputTypeSelecter">
+                </select>
+            </div>
+            <div id="answer-form">
+                <input type="text" id="answer-input" placeholder="추가할 지문을 입력하세요" required />
+                <button id="answer-addBtn">추가</button>
+            </div>
+            <ul id="answer-list"></ul>
+            <br>
+            <div style="display: inline-block;">
+                <h4 style="display: inline;">지문:</h4>
             </div>
             <div style="padding-top: 30px; padding-left: 50px;">
                 <input id="registButton" type="submit" value="등록" />
@@ -104,6 +118,9 @@
                     _this.delete();
                 }
             });
+            $('answer-addBtn').on('click',function(){
+                _this.addAnswer();
+            })
             $('#DiagnosisClassSelecter').on('change', function () {
                 var diagnosisClassNumber = $(this).val();
                 diagnosisClassNumber = parseInt(diagnosisClassNumber);
@@ -369,7 +386,27 @@
             //$('#DiagnosisEvaluationAreaSelecter').val(DiagnosisEvaluationAreaNumber);
             $('#EvaluationQuestionCode').val(EvaluationQuestionCode);
             $('#EvaluationQuestionContents').val(EvaluationQuestionContents);
-        }
+        },
+        addAnswer : function(){
+            // answer-input text add answer-list
+            let answer = $('#answer-input').val();
+            let html = '';
+            html += '<li class="list-group-item">';
+            html += '<div class="row">';
+            html += '<div class="col-10">';
+            html += '<input type="text" class="form-control" value="' + answer + '" readonly>';
+            html += '</div>';
+            html += '<div class="col-2">';
+            html += '<button type="button" class="btn btn-danger" onclick="DiagnosisEvaluationQnAJS.deleteAnswer(this)">삭제</button>';
+            html += '</div>';
+            html += '</div>';
+            html += '</li>';
+            $('#answer-list').append(html);
+            $('#answer-input').val('');
+        },
+        deleteAnswer : function(obj){
+            $(obj).parent().parent().parent().remove();
+        },
     };
 
     //ready
