--- a/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg_mgnt.cshtml
@@ -152,7 +152,7 @@
                 <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="SelectedResultList">선정 기업</a>
             </li>
             <li class="menu">
-                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="DiagnosticEvaluationList">진단평가 관리</a>
+                <a class="text-dark" asp-area="" asp-controller="MemberDiagnosis" asp-action="DiagnosisEvaluationList">진단평가 관리</a>
             </li>
         </ul>
     </div>
