--- a/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
+++ b/Ki4C_Solution/Views/Shared/_Aside_dg.cshtml
@@ -153,7 +153,7 @@
                 <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisEvaluationMeasurement">평가 척도</a>
             </li>
             <li class="menu">
-                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosticLevel">진단 수준</a>
+                <a asp-area="" asp-controller="ManagerStandardInforMgr" asp-action="DiagnosisLevel">진단 수준</a>
             </li>
         </ul>
     </div>
