Question 및 Passage 스타일 예시 추가, 테이블 언어 변경 및 컬러 통일

--- a/Ki4C_Solution/Views/Home/TViewPageList.cshtml
+++ b/Ki4C_Solution/Views/Home/TViewPageList.cshtml
@@ -6,7 +6,7 @@
 
 <table class="display" id="TViewPageList">
     <thead>
-        <tr>
+        <tr align="center" bgcolor="#2B92D5" style="color:#F8F8FF">
             <th scope="col">Page Name</th>
             <th scope="col">Link</th>
         </tr>
