--- a/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
+++ b/Ki4C_Solution/Views/Manager/StandardInforMgr/DiagnosisType.cshtml
@@ -216,7 +216,7 @@
                 contentType: 'application/json; charset=utf-8'
             }).done(function (data) {
                 data = JSON.parse(data);
-                let html = '<thead><tr align="center" bgcolor="skyblue">'
+                let html = '<thead><tr align="center" bgcolor="#2B92D5" style="color:#F8F8FF">'
                     + '<td> 번호 </td>'
                     + '<td> 진단종류코드 </td>'
                     + '<td> 진단종류명 </td>'
@@ -233,7 +233,11 @@
                 html += '</tbody>';
                 DIagnosisTypeJS.RefreshDiagnosisTypeList();
                 $('#DiagnosisTypeList').append(html);
-                $('#DiagnosisTypeList').dataTable();
+                $('#DiagnosisTypeList').DataTable({
+                    language: {
+                        url: 'https://cdn.datatables.net/plug-ins/1.13.3/i18n/ko.json'
+                    },
+                });
             }).fail(function (error) {
                 alert(JSON.stringify(error));
             });
